[package]
name = "ferret"
description = "Doom-compatible game engine"
version = "0.1.0"
authors = ["Rua <ruawhitepaw@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
arrayvec = {version = "0.5", features = ["serde"]}
bitflags = "1.2"
byteorder = "1.3"
clap = "2.33"
colored = "2.0"
crossbeam-channel = "0.5"
derivative = "2.1"
downcast-rs = "1.2"
fnv = "1.0"
legion = {git = "https://github.com/amethyst/legion", default-features = false, features = ["extended-tuple-impls", "serialize"]}
log = {version = "0.4", features = ["std"]}
nalgebra = {version = "0.24", features = ["serde-serialize"]}
num-traits = "0.2"
once_cell = "1.5"
rand = "0.8"
regex = "1.3"
relative-path = "1.3"
rmp-serde = {version = "0.15", features = ["serde128"]}
rodio = {version = "0.13", default-features = false}
scoped-tls-hkt = "0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
shrev = "1.1"
smallvec = "1.6"
vulkano = {git = "https://github.com/vulkano-rs/vulkano"}
vulkano-shaders = {git = "https://github.com/vulkano-rs/vulkano"}
vulkano-win = {git = "https://github.com/vulkano-rs/vulkano"}
winit = "0.24"

[profile.dev]
opt-level = 1

[profile.release]
incremental = true
lto = true
