[package]
name = "ferret"
description = "Doom-compatible game engine"
version = "0.1.0"
authors = ["Rua <ruawhitepaw@gmail.com>"]
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0"
arrayvec = { version = "0.7", features = ["serde"] }
bitflags = "1.3"
byteorder = "1.3"
chrono = "0.4"
clap = "2.34"
colored = "2.0"
crossbeam-channel = "0.5"
derivative = "2.1"
dirs = "4.0"
downcast-rs = "1.2"
fnv = "1.0"
hex = "0.4"
legion = { version = "0.4", default-features = false, features = ["extended-tuple-impls", "parallel", "serialize"] }
log = { version = "0.4", features = ["std"] }
memoffset = "0.6"
nalgebra = { version = "0.29", features = ["serde-serialize"] }
num-traits = "0.2"
once_cell = "1.9"
png = "0.17"
rand = "0.8"
regex = "1.5"
relative-path = "1.6"
rmp-serde = { version = "0.15", features = ["serde128"] }
rodio = { version = "0.14", default-features = false }
scoped-tls-hkt = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.7", features = ["const_generics"] }
vulkano = { git = "https://github.com/vulkano-rs/vulkano", rev = "286f1faf55caf9f643ee05f567b175156963af4f" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", rev = "286f1faf55caf9f643ee05f567b175156963af4f" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano", rev = "286f1faf55caf9f643ee05f567b175156963af4f" }
winit = { version = "0.26", features = ["serde"] }

[profile.dev]
opt-level = 2
incremental = true
lto = "off"

[profile.release]
incremental = true
lto = true
