[package]
name = "ferret"
version = "0.1.0"
authors = ["Rua <ruawhitepaw@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
alto = "3.0"
bincode = "1.2"
bitflags = "1.2"
byteorder = "1.3"
colored = "1.8"
derivative = "1.0"
derive = {path = "../derive"}
lazy_static = "1.3"
log = {version = "0.4.6", features = ["release_max_level_info"]}
nalgebra = "0.18.0"
num-traits = "0.2.10"
regex = "1.1"
sdl2 = {version = "0.32.2", features = ["bundled", "mixer"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specs = "0.15.1"
specs-derive = "0.4.0"
vulkano = {git = "https://github.com/vulkano-rs/vulkano"}
vulkano-shaders = "0.16.0"
vulkano-win = "0.16.0"
winit = {version = "0.19.5", features = ["serde"]}
